# remote-settings-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md
.circleci/: config.yml
.github/: dependabot.yml
rs-client-demo/: Cargo.toml
rs-client-demo/src/: main.rs
rs-client-test/: Cargo.toml
rs-client-test/src/: main.rs
src/: client.rs  lib.rs
src/client/: canonical_json.rs  kinto_http.rs  signatures.rs  storage.rs
src/client/net/: dummy_client.rs  mod.rs  test_client.rs  viaduct_client.rs
src/client/signatures/: default_verifier.rs  dummy_verifier.rs  openssl_verifier.rs  rc_crypto_verifier.rs  ring_verifier.rs  x509.rs
src/client/signatures/canonical_json/: Cargo.toml  README.md  spec.txt
src/client/signatures/canonical_json/src/: lib.rs  ser.rs
src/client/storage/: default_cache.rs  dummy_storage.rs  file_storage.rs  memory_storage.rs
