[package]
name = "remote-settings-client"
version = "0.1.0"
authors = ["Mathieu Leplatre <mathieu@mozilla.com>", "Vishwa Patel <vpatel@mozilla.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
ring_verifier = ["x509-parser", "ring"]
rc_crypto_verifier = ["x509-parser", "rc_crypto"]

[dev-dependencies]
env_logger = "0.8.3"
httpmock = "0.5.6"
viaduct-reqwest = { git = "https://github.com/mozilla/application-services", rev = "v74.0.1"}

[dependencies]
base64 = "0.13.0"
canonical_json = "0.4"
log = "0.4.0"
url = "2.1"
# specifying viaduct dependency from git repo since viaduct is not published yet to crates.io
viaduct = { git = "https://github.com/mozilla/application-services", rev = "v74.0.1"}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

# ring_verifier
ring = { version = "0.16", optional = true }
x509-parser = { version = "0.9", optional = true }

# rc_crypto verifier
rc_crypto = { git = "https://github.com/mozilla/application-services", rev = "v74.0.1", optional = true }
