[package]
name = "remote-settings-client"
version = "1.0.1"
authors = ["Mathieu Leplatre <mathieu@mozilla.com>", "Vishwa Patel <vpatel@mozilla.com>"]
edition = "2018"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
ring_verifier = ["oid-registry", "ring"]
rc_crypto_verifier = ["rc_crypto"]
# Using viaduct requires using tokio as well because we need to use the
# `spawn_blocking` API.
viaduct_client = ["viaduct", "tokio"]

[dev-dependencies]
env_logger = "0.9.0"
httpmock = "0.6.2"
viaduct-reqwest = { git = "https://github.com/mozilla/application-services", rev = "v87.2.0"}
mock_instant = "0.2.1"
tokio = { version = "1.8.2", features = ["macros"] }
# The following line is a workaround suggested on the rust-lang/cargo issue 2911
# https://github.com/rust-lang/cargo/issues/2911#issuecomment-749580481 to make
# it possible to enable features for tests. We need to enable the "viaduct_client"
# feature for the tests because most of the tests use a mocked HTTP server and it
# would be a non-trivial task to migrate them to use a fake client.
remote-settings-client = { path = ".", features = ["viaduct_client"] }

[dependencies]
anyhow = "1"
async-trait = "0.1.51"
base64 = "0.13.0"
canonical_json = "0.4"
hex = "0.4"
log = "0.4.0"
url = "2.1"
# specifying viaduct dependency from git repo since viaduct is not published yet to crates.io
viaduct = { git = "https://github.com/mozilla/application-services", rev = "v87.3.0", optional = true}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.10"
thiserror = "1.0"
tokio = { version = "1.8.2", features = ["rt"], optional = true }

# ring_verifier
ring = { version = "0.16", optional = true }
oid-registry = { version = "0.2.0", optional = true }
x509-parser = "0.12.0"

# rc_crypto verifier
rc_crypto = { git = "https://github.com/mozilla/application-services", rev = "v87.2.0", optional = true }
