[package]
name = "rs-client-demo"
version = "0.1.0"
authors = ["Vishwa Patel <vpatel@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remote-settings-client = {path = "../", features = ["openssl_verifier"]}
log = "0.4.0"
env_logger = "0.7.1"
serde_json = "1.0"
# Specifying viaduct, viaduct-reqwest dependency from git repo since viaduct, viaduct-reqwest are not published yet to crates.io 
viaduct = { git = "https://github.com/mozilla/application-services", rev = "61dcc364ac0d6d0816ab88a494bbf20d824b009b"}
viaduct-reqwest = { git = "https://github.com/mozilla/application-services", rev = "61dcc364ac0d6d0816ab88a494bbf20d824b009b"}
