[package]
name = "rs-client-test"
# I would call it rs-client-demo.
version = "0.1.0"
authors = ["Vishwa Patel <vpatel@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
remote-settings-client = {path = "../"}
tokio = { version = "0.2.21", features = ["macros", "tcp"] }
